# nichecraft

./: CHANGELOG.md  README.en.md  README.md  RULES.md  SKILL.md  package.json  product_convergence.json  pyproject.toml  requirements.txt  skill-check-report-20260724-221916.html  skill-report.html
docs/: README.md
references/: animations.md  frontend-slides-overlap-for-nichecraft.json  frontend-slides-style-bridge.json  frontend-slides-style-presets.json  html-deck-components.md  html-deck-layouts-swiss.md  html-deck-layouts.md  html-deck-themes-swiss.md  html-deck-themes.md  image-layout-patterns.md  shared-standards.md  template-designer.md
scripts/: animation_config.py  anti_ai_style_guard.py  batch_validate.py  canvas_interaction_guard.py  canvas_state.py  check_annotations.py  cli.py  config.py  diagram_builder.py  doctor.py  editable_pptx_layers.py  error_helper.py  excalidraw_bridge.py  excalidraw_import_adapter.py  excalidraw_svg.py  finalize_svg.py  frontend_style_bridge.py  gemini_watermark_remover.py  generate_examples_index.py  hallmark_bridge.py  image_gen.py  image_search.py  latex_render.py  mermaid_renderer.py  nichecraft_api.py  nichecraft_history_store.py  notes_to_audio.py  pptx_animations.py  preflight.sh  project_manager.py  project_utils.py  rotate_images.py  server_common.py  svg_position_calculator.py  svg_quality_checker.py  template_fill_pptx.py  total_md_split.py  visual_review.py
tests/: test_canvas_interaction_guard.py  test_canvas_state.py  test_cli.py  test_editable_pptx_layers.py  test_excalidraw_import_adapter.py  (+1 more)
(+28 files in other folders)
