[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nichecraft"
version = "0.1.0"
description = "SVG whiteboard and diagram generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "智械工坊", email = "ops@zhixie.ai"},
]
keywords = ["ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
nichecraft = "scripts.cli:main"

[project.urls]
Homepage = "https://github.com/503496348-ops/nichecraft"
Repository = "https://github.com/503496348-ops/nichecraft"
Issues = "https://github.com/503496348-ops/nichecraft/issues"

[tool.setuptools.packages.find]
include = ["nichecraft*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
